--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "20.17.17",
-    "@types/react": "18.3.18",
+    "@types/node": "^20",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "5.7.3"
+    "typescript": "^5"
   }
 }
